--- a/assets/css/support.css
+++ b/assets/css/support.css
@@ -407,291 +407,9 @@ footer{
 }
 
 @media screen and (max-width : 500px) {
-    header {
-        background-color: #0A8080;
-        bottom: -2%;
-        position: fixed;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 30px 0%;
-        width: 100%;
-        border-radius: 20px;
-        box-shadow: 20px 10px 50px rgba(0, 0, 0, 0.336);
-    }
-
-    .logo {
-        display: none;
-    }
-
-    .other {
-        display: none;
-    }
-
-    .navlist li {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        text-align: center;
-    }
-
-    .navlist span {
-        color: white;
-        display: none;
-    }
-
-    .navlist i {
-        display: block;
-        color: white;
-        font-size: 25px;
-        margin-left: 10px;
-    }
-
-    .support {
-        display: flex;
-        flex-direction: column-reverse;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        width: 100%;
-        height: 50%;
-    }
-
-    .title-sec h1 {
-        width: 100%;
-        font-size: 30px;
-    }
-
-    .supp-img img {
-        width: 100%;
-        height: auto;
-    }
-
-    .team{
-        padding: 4% 14%;
-        justify-content: center;
-        text-align: center;
-        width: 100%;
-        height: 100vh;
-        margin-top: 10%;
-    }
-    
-    .team .title-sec h1{
-        font-size: 20px;
-    }
-    
-    .team .title-sec p{
-        font-size: 8px;
-    }
-    
-    .container{
-        display: grid;
-        grid-template-columns: repeat(1,1fr);
-        margin-top: 10%;
-        gap: 1rem;
-    }
-    
-    .col img{
-        background-color: #FFFAF6;
-        padding: 25px 25px 0 25px;
-        align-items: center;
-    }
-    
-    .details-col{
-        text-align: start;
-    }
-    
-    .details-col h1{
-        font-weight: 500;
-        font-size: medium;
-    }
-    .details-col p{
-        font-size: small;
-        color: black;
-        margin-bottom: 10px;
-    }
-    
-    .icons{
-        display: flex;
-        gap: 1rem;
-    }
-    .icons a i{
-        color: #0A8080;
-        font-size: medium;
-    }
-    
-    .icon-s{
-        display: none;  
-    }
-    
-    .col-final{
-        filter:contrast(100%)
-    }
-
-    .contact{
-        padding: 10% 30px;
-        margin-top: 300%;
-        width: 100%;
-        height: auto;
-        display: flex;
-        flex-wrap: wrap;
-        background-color: #F8F0EA;
-        align-items: center;
-        justify-content: space-around;
-    }
-    .news-text h2{
-        margin-bottom: 5px;
-        color: black;
-        font-size: 2.5rem;
-        text-align: center;
-        width: 100%;
-    }
-    .news-text p{
-        color: black;
-        line-height: 30px;
-        font-size: 1rem;
-        text-align: center;
-        margin-bottom: 20px;
-    }
-    
-    .news-text .social_mediaic{
-        margin-bottom: 20px;
-        text-align: center;
-    }
-    
-    .news-text .social_mediaic a i{
-        font-size: 25px;
-        margin-right: 10px;
-        transition: all .4s ease;
-    }
-    
-    .news-text .social_mediaic a i:hover{
-        transform: translateY(-20px);
-    }
-
-    .news-text .info{
-        display: inline-flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-    }
-    
-    .news-text a{
-        color: black;
-        font-weight: bold;
-        font-size: 20px;
-        transition: all .4s ease;
-    }
-    
-    .news-text a i{
-        font-size: 30px;
-        vertical-align: middle;
-        margin-bottom: 1px;
-        transition: all .4s ease;
-        outline: none;
-    
-    }
-    
-    .news-text a:hover {
-        background-color: transparent;
-        color: white;
-        
-    }
-    
-    .news-text a:hover{
-        transform: translateX(20px);
-    }
-    
-    .contact form{
-        margin-top: 30px;
-        max-width: 100%;
-        width: 100%;
-    }
-    .forms{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 1rem;
-    }
-    .contact form input:first-child{
-        display: inline-block;
-        width: 100%;
-        padding: 20px 30px;
-        box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.1);
-        outline: none;
-        border: none;
-        border-radius: 15px;
-        margin-right: 10px;
-    }
-    
-    
-    
-    .contact form input:last-child{
-        display: inline-block;
-        width: 100%;
-        padding: 20px 150px 20px 30px;
-        box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.1);
-        outline: none;
-        border: none;
-        border-radius: 15px;
-        margin-right: 10px;
-    }
-    
-    .contact form textarea{
-        display: inline-block;
-        width: 100%;
-        padding: 20px 150px 20px 30px;
-        box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.1);
-        outline: none;
-        border: none;
-        border-radius: 15px;
-        margin-right: 10px;
-        margin-top: 20px;
-        margin-bottom: 30px;
-    }
-    
-    .send button{
-        background-color: white;
-        padding: 15px 30px;
-        border-radius: 20px;
-        color: #0A8080;
-        box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.1);
-        font-weight: var(--p-font);
-        transition: all .4s ease;
-        border: none;
-        outline: none;
-    }
-    
-    
-    .send button:hover {
-        background-color: transparent;
-        color: #0A8080;
-        border: 2px solid #0A8080;
-        cursor: pointer;
-        outline: none;
-        
-    }
-
-    footer{
-        width: 100%;
-        height: auto;
-        padding: 5% 10%;
-    }
-    
-    .copy img{
-        margin-right: 15px;
-        width: 25px;
-        height: auto;
-    }
-    
-    .rows{
-        display: grid;
-        grid-template-columns: repeat(1,1fr);
-        gap: 2rem;
-        justify-content: center;
-        align-items: center;
-    }
+   .main{
+    display: none;
+   }
     
     
     
