--- a/assets/css/advertise.css
+++ b/assets/css/advertise.css
@@ -118,6 +118,12 @@ li .active{
     right: 14%;
 }
 
+#menu {
+    font-size: 30px;
+    display: none;
+    z-index: 10001;
+}
+
 .advertise{
     display: flex;
     justify-content: space-between;
@@ -453,250 +459,270 @@ footer{
 }
 
 
-@media screen and (max-width : 500px) {
-    header {
-        background-color: #0A8080;
-        bottom: -2%;
-        position: fixed;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 30px 0%;
-        width: 100%;
-        border-radius: 20px;
-        box-shadow: 20px 10px 50px rgba(0, 0, 0, 0.336);
-    }
+.mob{
+    display: none;
+}
 
-    .logo {
-        display: none;
-    }
+@media screen and (max-width : 1330px) {
 
-    .other {
-        display: none;
-    }
-
-    .navlist li {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        text-align: center;
-    }
-
-    .navlist span {
-        color: white;
-        display: none;
-    }
-
-    .navlist i {
+    #menu {
         display: block;
-        color: white;
-        font-size: 25px;
-        margin-left: 10px;
+        cursor: pointer;
     }
 
-    .advertise {
-        display: flex;
-        flex-direction: column-reverse;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        width: 100%;
-        height: 50%;
-    }
-
-    .title-sec h1 {
-        width: 100%;
-        font-size: 30px;
-    }
-
-    .home-img img {
-        width: 100%;
-        height: auto;
-    }
-
-    .cards {
-        background-color: transparent;
+    .navlist {
         position: absolute;
-        top: 70%;
-        padding: 0% 14%;
+        top: 0;
+        right: -100%;
+        width: 270px;
+        height: 120vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 150px 30px;
+        gap: 50px;
+        background-color: #0A8080;
+        transition: all .4s ease;
     }
 
-    .cards h1 {
+    .other{
+        display: none;
+    }
+
+    li .active{
+        color: #e6d8cc;
+    }
+
+    .navlist a {
+        top: 100px;
+    }
+
+    .navlist a:hover {
+        color: var(--bg-color);
+    }
+
+    .btn a {
+        display: none;
+    }
+
+    .open {
+        right: 0;
+    }
+
+    
+
+
+
+
+
+}
+
+
+@media screen and (max-width : 467px) {
+
+
+
+
+    .main {
+        display: none;
+    }
+
+    header{
+        background-color: #E6D8CC;
+        box-shadow: none;
+    }
+    #menu{
+        color: #0F2137;
+    }
+    .navlist {
+        position: absolute;
+        top: 0;
+        left: -100%;
+        width: 270px;
+        height: 120vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 150px 30px;
+        gap: 50px;
+        background-color: #0A8080;
+        transition: all .4s ease;
+    }
+    .open {
+        left: 0;
+    }
+
+    .logo{
+        display: none;
+    }
+
+    .mob{
+        display: block;
+        padding: 25% 5%;
+        width: 100%;
+        height: 100%;
+        background-color: #E6D8CC;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    form input{
+        width: 300px;
+        background-color: white;
+        box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.1);
+        border-radius: 18px;
+        margin-left: 30px;
+
+    }
+
+    .h-img{
+        width: 280px;
+        height: 170px;
+        box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.1);
+        border-radius: 20px;
+        object-fit: cover;
+        margin-left: 38px;
+    }
+
+    .row-mob{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .title h1{
+        display: inline-flex;
+        justify-content: start;
+        align-items: start;
+        width: 100%;
         font-size: 20px;
+        color: #0F2137;
+    }
+    .line-t{
+        width: 50px;
+        background-color: #0F2137;
+        height: 7px;
+        border-radius: 50px;
+    }
+    .view a{
+        color: grey;
+        font-size: 12px;
     }
 
-    .row {
-        padding: 10% 14%;
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        margin-bottom: 60px;
+    .rows-mob{
+        margin-top: 8%;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
     }
 
-    .cards2 {
-        padding: 0% 14%;
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        gap: 0px;
-        margin-top: 145%;
-        
+    .rows-1-mob{
+        background-color: #DCDCDC;
+        border-radius: 25px;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        padding: 25px;
+        box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.1);
     }
 
-    .cards2 h1{
+    .rows-1-mob img{
+        width: 60px;
+        height: 60px;
+    }
+
+    .details-mob h1{
         font-size: 15px;
     }
 
-    .rows-1 img {
-        width: 70px;
-        height: 70px;
-    }
-
-    .details h1 {
-        font-size: 10px;
-    }
-
-    .details p {
-        width: 100%;
-        font-size: 10px;
-    }
-
-    .team{
-        padding: 2% 14%;
-        justify-content: center;
-        text-align: center;
-        width: 100%;
-        height: auto;
-    }
-    
-    .team .title-sec h1{
-        font-size: 20px;
-    }
-    .team .title-sec p{
-        font-size: 7px;
-    }
-    
-    .container{
-        display: grid;
-        grid-template-columns: repeat(1,1fr);
-        margin-top: 10%;
-        justify-content: center;
-        align-items: center;
-        gap: 1rem;
-    }
-    
-    .cad{
-        background-color: #FFF5ED;
-        width: 250px;
-        height: 250px;
-        border-radius: 50%;
-        align-items: center;
-        display: inline-flex;
-    }
-    
-    .cad img{
-        width: 250px;
-        height: 250px;
-        border-radius: 50%;
-        background-position: center;
-        background-size: cover;
-        object-fit: cover;
-    }
-    
-    .details-col{
-        text-align: center;
-    }
-    
-    .details-col h1{
-        font-weight: 500;
-        font-size: medium;
-    }
-    .details-col p{
-        font-size: small;
+    .details-mob p{
         color: black;
+        font-size: 15px;
         margin-bottom: 10px;
     }
+
+    .details-mob a {
+        color: rgb(0, 102, 255);
+        float: right;
+        
+        font-size: 12px;
+    }
+
     
-    .icons{
+
+    .col-team{
+        background-color: #EFE2DA;
+        box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.1);
         display: flex;
-        gap: 1rem;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
-    }
-    .icons a i{
-        color: #ff951d;
-        font-size: medium;
+        border-radius: 25px;
+        width: 300px;
+        height: 250px;
     }
 
-    .subscribe {
-        width: 100%;
+    .img-team img{
+        width: 120px;
         height: auto;
-        background-image: url(../img/Group\ 79.png);
-        background-position: center;
-        background-size: cover;
-        margin-top: 10%;
-        padding: 6% 30px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        position: relative;
     }
 
-    .det {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        gap: 3rem;
-        background-color: white;
-        width: 100%;
-        padding: 2.5%;
+    .name-team h1{
+        color: #0F2137;
+        font-size: 15px;
     }
 
-    .titles h1 {
-        font-size: 25px;
-    }
-
-    .titles p {
+    .name-team p{
+        color: black;
         font-size: 10px;
-        color: black;
-        width: 100%;
-        margin-top: 10px;
-        text-align: center;
     }
 
-
-    form input {
-        background-color: #D4DAE2;
-        border: none;
-        padding: 15px 30px;
-        width: 100%;
-        border-radius: 10px;
-        color: black;
-        margin-bottom: 20px;
-    }
-
-    .txt3 p {
-        color: black;
-        font-size: 8px;
-        margin-top: 10px;
-        margin-left: 2px;
-    }
-
-    form a {
-        background-color: #DB4A87;
-        color: white;
-        padding: 10px 20px;
-        justify-content: center;
+    .popup{
+        position: fixed;
+        background-color: white;
+        z-index: 100001;
+        width: 380px;
+        height: 500px;
         display: flex;
-        align-items: center;
-        margin-right: 20px;
-    }
-
-    .rows {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        gap: 2rem;
         justify-content: center;
         align-items: center;
+        text-align: center;
+        border-radius: 25px;
+        box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.1);
+        padding: 15px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50% , -50%);
+        display: none;
     }
+
+  
+
+    .detailss h1{
+        margin-top: 20px;
+        font-size: 22px;
+    }
+
+    .detailss p{
+        margin-top: 20px;
+        font-size: 15px;
+        margin-bottom: 50px;
+    }
+
+    .remove i{
+        background-color: rgb(187, 187, 187);
+        color: #0A8080;
+        font-size: 25px;
+        border-radius: 25px;
+        position: absolute;
+        top: 5%;
+        right: 5%;
+
+    }
+
+
+
+
 
 }
