--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -117,6 +117,12 @@ li .active{
     right: 14%;
 }
 
+#menu {
+    font-size: 30px;
+    display: none;
+    z-index: 10001;
+}
+
 .about{
     display: flex;
     justify-content: space-between;
@@ -444,339 +450,190 @@ footer{
     margin-right: 10px;
 }
 
-@media screen and (max-width : 500px) {
-    header {
-        background-color: #0A8080;
-        bottom: -2%;
-        position: fixed;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 30px 0%;
-        width: 100%;
-        border-radius: 20px;
-        box-shadow: 20px 10px 50px rgba(0, 0, 0, 0.336);
-    }
+.mob{
+    display: none;
+}
 
-    .logo {
-        display: none;
-    }
+@media screen and (max-width : 1330px) {
 
-    .other {
-        display: none;
-    }
-
-    .navlist li {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        text-align: center;
-    }
-
-    .navlist span {
-        color: white;
-        display: none;
-    }
-
-    .navlist i {
+    #menu {
         display: block;
-        color: white;
-        font-size: 25px;
-        margin-left: 10px;
+        cursor: pointer;
     }
 
-    .about {
+    .navlist {
+        position: absolute;
+        top: 0;
+        right: -100%;
+        width: 270px;
+        height: 120vh;
         display: flex;
-        flex-direction: column-reverse;
-        justify-content: center;
+        flex-direction: column;
         align-items: center;
-        text-align: center;
-        width: 100%;
-        height: 50%;
+        padding: 150px 30px;
+        gap: 50px;
+        background-color: #0A8080;
+        transition: all .4s ease;
     }
 
-    .title-sec h1 {
-        width: 100%;
-        font-size: 30px;
+    .other{
+        display: none;
     }
 
-    .supp-img img {
-        width: 100%;
-        height: auto;
+    li .active{
+        color: #e6d8cc;
     }
 
-    .subscribe {
-        width: 100%;
-        height: auto;
-        background-image: url(../img/Group\ 79.png);
-        background-position: center;
-        background-size: cover;
-        margin-top: 10%;
-        padding: 6% 30px;
+    .navlist a {
+        top: 100px;
+    }
+
+    .navlist a:hover {
+        color: var(--bg-color);
+    }
+
+    .btn a {
+        display: none;
+    }
+
+    .open {
+        right: 0;
+    }
+
+    
+
+
+
+
+
+}
+
+
+@media screen and (max-width : 467px) {
+
+
+
+
+    .main {
+        display: none;
+    }
+
+    header{
+        background-color: #E6D8CC;
+        box-shadow: none;
+    }
+    #menu{
+        color: #0F2137;
+    }
+    .navlist {
+        position: absolute;
+        top: 0;
+        left: -100%;
+        width: 270px;
+        height: 120vh;
         display: flex;
-        justify-content: center;
+        flex-direction: column;
         align-items: center;
+        padding: 150px 30px;
+        gap: 50px;
+        background-color: #0A8080;
+        transition: all .4s ease;
+    }
+    .open {
+        left: 0;
     }
 
-    .det {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        gap: 3rem;
+    .logo{
+        display: none;
+    }
+
+    .mob{
+        display: block;
+        padding: 25% 5%;
+        width: 100%;
+        height: 100%;
+        background-color: #E6D8CC;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    form input{
+        width: 300px;
         background-color: white;
-        width: 100%;
-        padding: 2.5%;
+        box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.1);
+        border-radius: 18px;
+        margin-left: 30px;
+
     }
 
-    .titles h1 {
-        font-size: 25px;
+    .h-img{
+        width: 280px;
+        height: 170px;
+        box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.1);
+        border-radius: 20px;
+        object-fit: cover;
+        margin-left: 38px;
     }
 
-    .titles p {
-        font-size: 10px;
-        color: black;
-        width: 100%;
-        margin-top: 10px;
-        text-align: center;
-    }
-
-
-    form input {
-        background-color: #D4DAE2;
-        border: none;
-        padding: 15px 30px;
-        width: 100%;
-        border-radius: 10px;
-        color: black;
-        margin-bottom: 20px;
-    }
-
-    .txt3 p {
-        color: black;
-        font-size: 8px;
-        margin-top: 10px;
-        margin-left: 2px;
-    }
-
-    form a {
-        background-color: #DB4A87;
-        color: white;
-        padding: 10px 20px;
-        justify-content: center;
+    .row-mob{
         display: flex;
         align-items: center;
-        margin-right: 20px;
+        justify-content: space-between;
     }
-
-    .rows {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        gap: 2rem;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .who{
-        padding: 5% 5%;
-        width: 100%;
-    }
-    
-    .row{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 1rem;
-        width: 100%;
-    }
-    
-    .img img{
-        width: 100%;
-        height: auto;
-    }
-    
-    .who h1{
-        text-align: center;
-        font-size: 30px;
-        margin-top: 5%;
-    }
-    
-    .txt p{
-        width: 100%;
-        line-height: 35px;
-        text-align: center;
-    }
-    
-    .rows{
-        margin-top: 8%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 1rem;
-        width: 100%;
-    }
-    
-    .txts h1{
-        font-size: medium;
-        font-weight: 700;
-        width: 100%;
-        text-align: center;
-    }
-    
-    .line1{
-        width: 50%;
-        height: 3px;
-        margin-left: 25%;
-        background-color: #A17857;
-    }
-    
-    .rows-why{
-        padding: 10% 1%;
-    }
-    
-    .column{
-        display: flex;
-        flex-direction: column-reverse;
-        justify-content: center;
-        align-items: center;
-        gap: 2rem;
-    }
-    
-    .col-1{
-        text-align: center;
-    }
-    
-    .col-1 h1{
-        font-size: 20px;
-        text-align: center;
-        margin-right: 20px;
-    }
-    
-    .col-1 p{
-        color: black;
-
-        margin-top: 20px;
-        font-size: 12px;
-    }
-    
-    .col-2 img{
-        width: 100%;
-        height: auto;
-    }
-    .checks{
-        margin-top: 20px;
-        width: 100%;
-    }
-    
-    .check-1 i{
-        color: green;
-        font-size: 20px;
-       
-    }
-    
-    .check-1 a {
-        color: black;
-        font-size: small;
-    }
-    
-    .check-1 a i{
-        vertical-align: middle;
-    }
-    
-    .check-2 i{
-        color: green;
-        font-size: 20px;
-    }
-    
-    .check-2{
-        margin-top: 10px;
-    }
-    
-    .check-2 a {
-        color: black;
-        font-size: small;
-    }
-    
-    .check-2 a i{
-        vertical-align: middle;
-    }
-    
-    
-    .explore{
-        color: #3183FF;
-        font-weight: 600;
+    .title h1{
         display: inline-flex;
-        margin-top: 50px;
-    }
-    
-    .explore i{
-        color: #3183FF;
-        font-size: 27px;
-        
-    }
-    
-    .founder{
-        padding: 0 1%;
-    }
-    
-    .rowss{
-        display: flex;
-        justify-content: center;
-        flex-direction: column-reverse;
-        align-items: center;
-        text-align: center;
-        gap: 1rem;
-    }
-    
-    .img img{
-        width: 70%;
-        height: auto;
-    }
-    
-    
-    .detailss p{
-        font-size: 25px;
-        color: black;
-        margin-bottom: 50px;
-    }
-    
-    .detailss .p1{
-        color: black;
-        font-size: 11px;
-        
-    }
-    
-
-
-
-
-
-
-
-    footer{
+        justify-content: start;
+        align-items: start;
         width: 100%;
-        height: auto;
-        padding: 5% 10%;
+        font-size: 20px;
+        color: #0F2137;
     }
-    
-    .copy img{
-        margin-right: 15px;
-        width: 25px;
-        height: auto;
+    .line-t{
+        width: 50px;
+        background-color: #0F2137;
+        height: 7px;
+        border-radius: 50px;
     }
-    
-    .rows{
-        display: grid;
-        grid-template-columns: repeat(1,1fr);
+
+    .founder{
+        width: 100%;
+        background-color: #D4DAE2;
+        padding: 15px;
+        border-radius: 15px;
+        box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.1);
+    }
+
+    .founder p{
+        text-align: start;
+    }
+
+    .txtt{
+        text-align: center;
+    }
+
+    .f-img .im1{
+        width: 200px;
+        height: 200px;
+        object-fit: cover;
+        border-radius: 50%;
+    }
+
+    .f-img{
+        display: flex;
+        flex-direction: column;
         gap: 2rem;
         justify-content: center;
         align-items: center;
     }
-    
-    
-    
+
+    .f-img img{
+        width: 100px;
+    }
+
+    .f-img h1{
+        font-size: 25px;
+    }
+
 
 }
