--- a/assets/css/faq.css
+++ b/assets/css/faq.css
@@ -70,12 +70,11 @@ header{
     letter-spacing: 2px;
     transition: all .4s ease;
 }
-
-.navlist a:hover{
+li .active{
     color: #0A8080;
 }
 
-li .active{
+.navlist a:hover{
     color: #0A8080;
 }
 
@@ -117,20 +116,20 @@ li .active{
     position: absolute;
     right: 14%;
 }
+
 #menu {
     font-size: 30px;
     display: none;
     z-index: 10001;
 }
 
-
-.support{
+.about{
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 8% 14%;
     text-align: start;
-    background-color: #FFF5ED;
+    background-color: #D4DAE2;
     width: 100%;
     height: 100vh;
 }
@@ -159,75 +158,128 @@ li .active{
     border-radius: 5px;
 }
 
-.supp-img{
+.about-img{
     position: relative;
 }
 
-.supp-img img{
+.about-img img{
     width: 100%;
     height: auto;
 }
 
 
 
-.team .title-sec h1{
-    font-size: 30px;
-}
-
-.team .title-sec p{
-    font-size: 15px;
-}
 
 
-.team {
-    padding: 5% 25%;
-    justify-content: center;
+.h1 {
+    background-color: #D4DAE2;
+    color: white;
+    padding: 20px;
     text-align: center;
+}
+
+.faq-container {
     width: 100%;
-    height: 100vh;
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+    gap: 10px;
+}
+
+.faq {
+    width: 700px;
+    background-color: #fff;
+    border: none;
+    margin-bottom: 10px;
+    border-radius: 15px;
+    padding: 15px;
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
+}
+
+.arrow{
+    display: flex;
+    justify-content: space-between;
+    cursor: pointer;
+}
+
+.question {
+    font-weight: bold;
+}
+
+.answer {
+    margin-top: 10px;
+    display: none;
+    color: grey;
 }
 
 
-.swiper{
-    margin-top: 8rem;
-    
-}
 
-.col img{
-    background-color: #FFFAF6;
-    padding: 25px 25px 0 25px;
+
+.subscribe{
+    margin-top: 5%;
+    width: 100%;
+    height: auto;
+    background-image: url(../img/Group\ 79.png);
+    background-position: center;
+    background-size: cover;
+    padding: 6% 80px;
+    display: flex;
+    justify-content: center;
     align-items: center;
 }
 
-.details-col{
+.det{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    justify-content: center;
+    align-items: center;
     text-align: start;
+    gap: 3rem;
+    background-color: white;
+    width: 60%;
+    padding: 2.5%;
 }
 
-.details-col h1{
-    font-weight: 500;
-    font-size: medium;
+.titles h1{
+    font-size: 25px;
 }
-.details-col p{
-    font-size: small;
+.titles p{
+    font-size: 10px;
     color: black;
-    margin-bottom: 10px;
-}
-
-.icons{
-    display: flex;
-    gap: 1rem;
-}
-.icons a i{
-    color: #0A8080;
-    font-size: medium;
+    width: 70%;
+    margin-top: 10px;
 }
 
 
+form input{
+    background-color: #D4DAE2;
+    border: none;
+    padding: 15px 30px;
+    width: 65%;
+    border-radius: 10px;
+    color: black;
+}
+.txt3 p{
+    color: black;
+    font-size: 8px;
+    margin-top: 10px;
+    margin-left: 2px;
+}
+
+form a{
+    background-color: #DB4A87;
+    color: white;
+    padding: 10px 20px;
+    margin-left: 10px;
+}
 
 footer{
     width: 100%;
     height: auto;
-    padding: 5% 10%;
+    padding: 0% 10% 2% 10%;
 }
 
 .copy img{
@@ -277,139 +329,6 @@ footer{
     vertical-align: middle;
     margin-top: 2px;
     margin-right: 10px;
-}
-
-.contact{
-    padding: 10% 30px;
-	width: 100%;
-	height: auto;
-	display: flex;
-	flex-wrap: wrap;
-	background-color: #F8F0EA;
-	align-items: center;
-    justify-content: space-around;
-}
-.news-text h2{
-	margin-bottom: 5px;
-	color: black;
-    font-size: 3.5rem;
-}
-.news-text p{
-	color: black;
-	line-height: 30px;
-    font-size: 1.2rem;
-    margin-bottom: 20px;
-}
-
-.news-text .social_mediaic{
-	margin-bottom: 20px;
-}
-
-.news-text .social_mediaic a i{
-	font-size: 25px;
-	margin-right: 10px;
-	transition: all .4s ease;
-}
-
-.news-text .social_mediaic a i:hover{
-	transform: translateY(-20px);
-}
-
-.news-text a{
-    background-color: transparent;
-    border-radius: 20px;
-    color: black;
-    font-weight: bold;
-    font-size: 25px;
-    transition: all .4s ease;
-}
-
-.news-text a i{
-    font-size: 30px;
-    vertical-align: middle;
-    margin-bottom: 1px;
-    transition: all .4s ease;
-    outline: none;
-
-}
-
-.news-text a:hover {
-    background-color: transparent;
-    color: white;
-    
-}
-
-.news-text a:hover{
-    transform: translateX(20px);
-}
-
-.contact form{
-	margin-top: 100px;
-	max-width: 100%;
-	width: 100%;
-}
-.forms{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.contact form input:first-child{
-	display: inline-block;
-	width: 100%;
-	padding: 20px 30px;
-	box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.1);
-	outline: none;
-	border: none;
-	border-radius: 15px;
-    margin-right: 10px;
-}
-
-
-
-.contact form input:last-child{
-	display: inline-block;
-	width: 100%;
-	padding: 20px 150px 20px 30px;
-	box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.1);
-	outline: none;
-	border: none;
-	border-radius: 15px;
-    margin-right: 10px;
-}
-
-.contact form textarea{
-    display: inline-block;
-	width: 100%;
-	padding: 20px 150px 20px 30px;
-	box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.1);
-	outline: none;
-	border: none;
-	border-radius: 15px;
-    margin-right: 10px;
-    margin-top: 20px;
-    margin-bottom: 30px;
-}
-
-.send button{
-    background-color: white;
-    padding: 15px 30px;
-    border-radius: 20px;
-    color: #0A8080;
-    box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.1);
-    font-weight: var(--p-font);
-    transition: all .4s ease;
-	border: none;
-	outline: none;
-}
-
-
-.send button:hover {
-    background-color: transparent;
-    color: #0A8080;
-	border: 2px solid #0A8080;
-	cursor: pointer;
-	outline: none;
-    
 }
 
 .mob{
@@ -558,70 +477,44 @@ footer{
         border-radius: 50px;
     }
 
-    form{
+    .founder{
+        width: 100%;
+        background-color: #D4DAE2;
+        padding: 15px;
+        border-radius: 15px;
+        box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.1);
+    }
+
+    .founder p{
+        text-align: start;
+    }
+
+    .txtt{
+        text-align: center;
+    }
+
+    .f-img .im1{
+        width: 200px;
+        height: 200px;
+        object-fit: cover;
+        border-radius: 50%;
+    }
+
+    .f-img{
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 10px;
-        margin-top: 50px;
-    }
-
-    form input{
-        background-color: white;
-        border: none;
-        padding: 16px;
-        width: 100%;
-        margin-right: 9rem;
-        margin-left: 9rem;
-        box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
-    }
-
-    form textarea{
-        background-color: white;
-        border: none;
-        border-radius: 16px;
-        width: 100%;
-        padding: 16px;
-        box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
-    }
-
-    .btn-contact{
-        border: none;
-        background-color: #0F2137;
-        color: white;
-        font-weight: 600;
-        font-size: 20px;
-        padding: 12px 50px;
-        border-radius: 20px;
-        margin-bottom: 50px;
-    }
-
-    .cols{
-        display: flex;
-        flex-direction: column;
-        align-items: start;
-        gap: 40px;
-        margin-top: 50px;
-    }
-
-    .content{
-        display: flex;
-        gap: 20px;
+        gap: 2rem;
         justify-content: center;
         align-items: center;
     }
 
-    .content img{
-        width: 30px;
-        height: auto;
+    .f-img img{
+        width: 100px;
     }
 
-    .content h1{
-        font-size: 20px;
+    .f-img h1{
+        font-size: 25px;
     }
-
-
 
 
 }
