--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -586,6 +586,77 @@ footer {
     display: none;
 }
 
+@media screen and (max-width : 900px){
+
+    header{
+        padding: 20px 2%;
+    }
+
+    .line img {
+        right: 2%;
+    }
+
+    .navlist a{
+        margin: 15px;
+    }
+
+    .home{
+        padding: 15% 0%;
+
+    }
+
+    .cards {
+     
+        top: 55%;
+        padding: 8% 2%;
+        height: auto;
+    }
+
+    .row {
+        margin-top: 8%;
+        grid-template-columns: repeat(2,1fr);
+      
+    }
+
+    .quot p{
+        width: 60%;
+        top: 60%;
+        right: 20%;
+    }
+    .quot .p2{
+        top: 73%;
+    }
+
+    .quot img{
+        right: 30%;
+    }
+
+    .team{
+        margin-top: 50%;
+    }
+
+    .col__blog {
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        margin-top: 10%;
+    }
+
+    .subscribe{
+        margin-top: 150%;
+        padding: 10% 0%;
+    }
+
+    .det {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 1rem;
+        background-color: white;
+        width: 100%;
+
+    }
+
+
+}
+
 @media screen and (max-width : 500px) {
 
 
