--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -586,7 +586,87 @@ footer {
     display: none;
 }
 
-@media screen and (max-width : 900px){
+@media screen and (max-width : 770px){
+
+    header{
+        padding: 20px 2%;
+    }
+
+    .line img {
+        right: 2%;
+    }
+
+    .navlist a{
+        margin: 15px;
+    }
+
+    .home{
+        padding: 15% 0%;
+
+    }
+
+    .cards {
+     
+        top: 60%;
+        padding: 8% 2%;
+        height: auto;
+    }
+
+    .row {
+        margin-top: 8%;
+        grid-template-columns: repeat(2,1fr);
+      
+    }
+
+    .quot p{
+        width: 60%;
+        top: 60%;
+        right: 20%;
+    }
+    .quot .p2{
+        top: 73%;
+    }
+
+    .quot img{
+        right: 30%;
+    }
+
+    .team{
+        margin-top: 60%;
+    }
+
+
+    .col__blog {
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        margin-top: 10%;
+    }
+
+    .subscribe{
+        margin-top: 180%;
+        padding: 10% 0%;
+    }
+
+    .det {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 1rem;
+        background-color: white;
+        width: 100%;
+
+    }
+
+    .det form{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+    }
+
+
+}
+
+@media screen and (max-width : 900px) and (min-width : 770px){
 
     header{
         padding: 20px 2%;
@@ -714,6 +794,11 @@ footer {
         height: auto;
     }
 
+    .row1{
+        display: flex;
+        flex-direction: column;
+    }
+
     .log img {
         width: 50%;
         height: auto;
@@ -765,7 +850,7 @@ footer {
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-bottom: 30px;
+        margin-bottom: 50px;
         gap: 5px;
     }
 
