--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -124,7 +124,8 @@ li .active{
 }
 
 .about{
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(auto-fill , minmax(500px , 1fr));
     justify-content: space-between;
     align-items: center;
     padding: 8% 14%;
@@ -173,14 +174,15 @@ li .active{
 }
 
 .row{
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(auto-fill , minmax(500px , 1fr));
     justify-content: center;
     align-items: center;
     margin-top: 5%;
 }
 
 .img img{
-    width: 120%;
+    width: 100%;
     height: auto;
 }
 
@@ -190,18 +192,18 @@ li .active{
 }
 
 .txt p{
-    width: 60%;
+    width: 100%;
     line-height: 35px;
     float: right;
 }
 
 .rows{
     margin-top: 8%;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(auto-fill , minmax(500px , 1fr));
     justify-content: center;
     align-items: center;
-    gap: 3rem;
-    width: 100%;
+    width: 180%;
 }
 
 .txts h1{
@@ -223,7 +225,8 @@ li .active{
 }
 
 .column{
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(auto-fill , minmax(500px , 1fr));
     justify-content: center;
     align-items: center;
     gap: 2rem;
@@ -313,7 +316,8 @@ li .active{
 }
 
 .rowss{
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(auto-fill , minmax(500px , 1fr));
     justify-content: center;
     align-items: center;
     gap: 3rem;
@@ -352,14 +356,14 @@ li .active{
 
 .det{
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(auto-fill , minmax(400px , 1fr));
     justify-content: center;
     align-items: center;
     text-align: start;
     gap: 3rem;
     background-color: white;
     width: 60%;
-    padding: 2.5%;
+    padding: 3%;
 }
 
 .titles h1{
@@ -409,7 +413,7 @@ footer{
 
 .rows{
     display: grid;
-    grid-template-columns: repeat(5,1fr);
+    grid-template-columns: repeat(auto-fill , minmax(260px , 1fr));
     gap: 2rem;
     justify-content: center;
     align-items: center;
@@ -454,57 +458,47 @@ footer{
     display: none;
 }
 
-@media screen and (max-width : 1330px) {
+@media screen and (max-width : 770px){
 
-    #menu {
-        display: block;
-        cursor: pointer;
+    header{
+        padding: 20px 2%;
     }
 
-    .navlist {
-        position: absolute;
-        top: 0;
-        right: -100%;
-        width: 270px;
-        height: 120vh;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 150px 30px;
-        gap: 50px;
-        background-color: #0A8080;
-        transition: all .4s ease;
+    .line img {
+        right: 2%;
     }
 
-    .other{
-        display: none;
+    .navlist a{
+        margin: 15px;
     }
 
-    li .active{
-        color: #e6d8cc;
-    }
-
-    .navlist a {
-        top: 100px;
-    }
-
-    .navlist a:hover {
-        color: var(--bg-color);
-    }
-
-    .btn a {
-        display: none;
-    }
-
-    .open {
-        right: 0;
+    .support{
+        text-align: center;
     }
 
     
 
 
+}
 
+@media screen and (max-width : 900px) and (min-width : 770px){
 
+    header{
+        padding: 20px 2%;
+    }
+
+    .line img {
+        right: 2%;
+    }
+
+    .navlist a{
+        margin: 15px;
+    }
+
+    .support{
+        text-align: center;
+    }   
+    
 
 }
 
@@ -513,18 +507,22 @@ footer{
 
 
 
-
     .main {
         display: none;
+    }
+
+
+    #menu {
+        display: block;
+        cursor: pointer;
+        color: #0F2137;
     }
 
     header{
         background-color: #E6D8CC;
         box-shadow: none;
     }
-    #menu{
-        color: #0F2137;
-    }
+   
     .navlist {
         position: absolute;
         top: 0;
@@ -544,6 +542,27 @@ footer{
     }
 
     .logo{
+        display: none;
+    }
+
+    
+    .other{
+        display: none;
+    }
+
+    li .active{
+        color: #e6d8cc;
+    }
+
+    .navlist a {
+        top: 100px;
+    }
+
+    .navlist a:hover {
+        color: var(--bg-color);
+    }
+
+    .btn a {
         display: none;
     }
 
