--- a/assets/css/support.css
+++ b/assets/css/support.css
@@ -125,7 +125,8 @@ li .active{
 
 
 .support{
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(auto-fill , minmax(500px , 1fr));
     justify-content: space-between;
     align-items: center;
     padding: 8% 14%;
@@ -238,7 +239,7 @@ footer{
 
 .rows{
     display: grid;
-    grid-template-columns: repeat(5,1fr);
+    grid-template-columns: repeat(auto-fill , minmax(260px , 1fr));
     gap: 2rem;
     justify-content: center;
     align-items: center;
@@ -280,14 +281,14 @@ footer{
 }
 
 .contact{
-    padding: 10% 30px;
+    padding: 10% 50px;
 	width: 100%;
 	height: auto;
-	display: flex;
-	flex-wrap: wrap;
+	display: grid;
+    grid-template-columns: repeat(auto-fill , minmax(600px , 1fr));
 	background-color: #F8F0EA;
-	align-items: center;
-    justify-content: space-around;
+	justify-content: center;
+    align-items: center;
 }
 .news-text h2{
 	margin-bottom: 5px;
@@ -416,57 +417,47 @@ footer{
     display: none;
 }
 
-@media screen and (max-width : 1330px) {
+@media screen and (max-width : 770px){
 
-    #menu {
-        display: block;
-        cursor: pointer;
+    header{
+        padding: 20px 2%;
     }
 
-    .navlist {
-        position: absolute;
-        top: 0;
-        right: -100%;
-        width: 270px;
-        height: 120vh;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 150px 30px;
-        gap: 50px;
-        background-color: #0A8080;
-        transition: all .4s ease;
+    .line img {
+        right: 2%;
     }
 
-    .other{
-        display: none;
+    .navlist a{
+        margin: 15px;
     }
 
-    li .active{
-        color: #e6d8cc;
-    }
-
-    .navlist a {
-        top: 100px;
-    }
-
-    .navlist a:hover {
-        color: var(--bg-color);
-    }
-
-    .btn a {
-        display: none;
-    }
-
-    .open {
-        right: 0;
+    .support{
+        text-align: center;
     }
 
     
 
 
+}
 
+@media screen and (max-width : 900px) and (min-width : 770px){
 
+    header{
+        padding: 20px 2%;
+    }
+
+    .line img {
+        right: 2%;
+    }
+
+    .navlist a{
+        margin: 15px;
+    }
+
+    .support{
+        text-align: center;
+    }   
+    
 
 }
 
@@ -475,18 +466,22 @@ footer{
 
 
 
-
     .main {
         display: none;
+    }
+
+
+    #menu {
+        display: block;
+        cursor: pointer;
+        color: #0F2137;
     }
 
     header{
         background-color: #E6D8CC;
         box-shadow: none;
     }
-    #menu{
-        color: #0F2137;
-    }
+   
     .navlist {
         position: absolute;
         top: 0;
@@ -506,6 +501,27 @@ footer{
     }
 
     .logo{
+        display: none;
+    }
+
+    
+    .other{
+        display: none;
+    }
+
+    li .active{
+        color: #e6d8cc;
+    }
+
+    .navlist a {
+        top: 100px;
+    }
+
+    .navlist a:hover {
+        color: var(--bg-color);
+    }
+
+    .btn a {
         display: none;
     }
 
