--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -182,11 +182,15 @@ header {
     color: black;
 }
 
-.btn2 img {
-    width: 35px;
-    height: 35px;
-    border-radius: 50%;
-    margin-left: 20px;
+.other{
+    display: flex;
+    gap: 2rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.other a:last-child {
+    color: #0A8080;
 }
 
 .line img {
@@ -359,9 +363,11 @@ li .active {
 }
 
 
-.swiper {
-    margin-top: 9rem;
-    padding: 0 10%;
+.container{
+    display: grid;
+    grid-template-columns: repeat(auto-fill , minmax(300px , 1fr));
+    gap: 2rem;
+    margin-top: 80px;
 }
 
 
