--- a/assets/css/support.css
+++ b/assets/css/support.css
@@ -19,15 +19,29 @@
 	font-display: swap;
   }
   
-:root{
-	--bg-color: #FFFFFF;
-	--text-color: black;
-	--second-color: #5a7184;
-	--main-color: #6e54fa;
-	--big-font: 6rem;
-	--h2-font: 3rem;
-	--p-font: 1.1rem;
+  :root {
+    --bg-color:  #0F2137;
+    --text-color: #ffffff;
+    --second-color: var(--second-color);
+    --main-color: #0F2137;
+    --main-color2: #0F2137;
+    --big-font: 6rem;
+    --h2-font: 3rem;
+    --p-font: 1.1rem;
 }
+
+
+.dark-theme{
+    --bg-color: #ffffff;
+    --text-color: #0F2137;
+    --second-color: var(--second-color);
+    --main-color: #e6d8cc;
+    --main-color2: var(--main-color);
+    --big-font: 6rem;
+    --h2-font: 3rem;
+    --p-font: 1.1rem;
+}
+
 body{
 	background: var(--bg-color);
 	color: var(--text-color);
@@ -53,7 +67,7 @@ header{
 
 .logo{
     display: flex;
-    color: black;
+    color: var(--text-color);
     font-size: 20px;
 }
 
@@ -65,23 +79,23 @@ header{
 
 .navlist a{
     position: relative;
-    color: black;
+    color: var(--text-color);
     margin: 0 20px;
     letter-spacing: 2px;
     transition: all .4s ease;
 }
 
 .navlist a:hover{
-    color: #0A8080;
+    color: var(--second-color);
 }
 
-li .active{
-    color: #0A8080;
+li.active{
+    color: var(--second-color);
 }
 
 .navlist a::after{
     position: absolute;
-    background-color: #0A8080;
+    background-color: var(--second-color);
     content: '';
     left: 0;
     bottom: 0;
@@ -103,14 +117,30 @@ li .active{
 }
 
 .btn{
-    color: black;
+    color: var(--text-color);
     letter-spacing: 2px;
     margin-right: 20px;
 }
 
 .btn2{
-    color: #0A8080;
-    position: relative;
+    color: var(--text-color);
+}
+
+.other{
+    display: flex;
+    gap: 2rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.other a:last-child {
+    color: var(--second-color);
+}
+
+#moon{
+    font-size: 18px;
+    color: var(--text-color);
+    cursor: pointer;
 }
 
 .line img{
@@ -131,13 +161,13 @@ li .active{
     align-items: center;
     padding: 8% 14%;
     text-align: start;
-    background-color: #FFF5ED;
+    background-color: var(--main-color);
     width: 100%;
     height: 100vh;
 }
 
 .title-sec h1{
-    color: black;
+    color: var(--text-color);
     font-size: 70px;
 }
 
@@ -146,13 +176,13 @@ li .active{
 }
 
 .title-sec p{
-    color: black;
+    color: var(--text-color);
     margin: 15px 0;
 }
 
 .getbtn{
-    background-color: #0A8080;
-    color: white;
+    background-color: var(--second-color);
+    color: var(--bg-color);
     letter-spacing: 1px;
     padding: 12px 22px;
     margin-top: 15px;
@@ -195,7 +225,7 @@ li .active{
 }
 
 .col img{
-    background-color: #FFFAF6;
+    background-color: var(--main-color);
     padding: 25px 25px 0 25px;
     align-items: center;
 }
@@ -210,7 +240,7 @@ li .active{
 }
 .details-col p{
     font-size: small;
-    color: black;
+    color: var(--text-color);
     margin-bottom: 10px;
 }
 
@@ -219,7 +249,7 @@ li .active{
     gap: 1rem;
 }
 .icons a i{
-    color: #0A8080;
+    color: var(--second-color);
     font-size: medium;
 }
 
@@ -255,7 +285,7 @@ footer{
 }
 
 .copy p{
-    color: black;
+    color: var(--text-color);
     font-size: small;
 }
 
@@ -267,7 +297,7 @@ footer{
 }
 
 .det-foot a{
-    color: black;
+    color: var(--text-color);
     margin-bottom: 10px;
     display: inline-flex;
 }
@@ -286,17 +316,17 @@ footer{
 	height: auto;
 	display: grid;
     grid-template-columns: repeat(auto-fill , minmax(600px , 1fr));
-	background-color: #F8F0EA;
+	background-color: var(--main-color);
 	justify-content: center;
     align-items: center;
 }
 .news-text h2{
 	margin-bottom: 5px;
-	color: black;
+	color: var(--text-color);
     font-size: 3.5rem;
 }
 .news-text p{
-	color: black;
+	color: var(--text-color);
 	line-height: 30px;
     font-size: 1.2rem;
     margin-bottom: 20px;
@@ -319,7 +349,7 @@ footer{
 .news-text a{
     background-color: transparent;
     border-radius: 20px;
-    color: black;
+    color: var(--text-color);
     font-weight: bold;
     font-size: 25px;
     transition: all .4s ease;
@@ -336,7 +366,7 @@ footer{
 
 .news-text a:hover {
     background-color: transparent;
-    color: white;
+    color: var(--bg-color);
     
 }
 
@@ -392,10 +422,10 @@ footer{
 }
 
 .send button{
-    background-color: white;
+    background-color: var(--text-color);
     padding: 15px 30px;
     border-radius: 20px;
-    color: #0A8080;
+    color: var(--bg-color);
     box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.1);
     font-weight: var(--p-font);
     transition: all .4s ease;
@@ -406,8 +436,8 @@ footer{
 
 .send button:hover {
     background-color: transparent;
-    color: #0A8080;
-	border: 2px solid #0A8080;
+    color: var(--second-color);
+	border: 2px solid var(--second-color);
 	cursor: pointer;
 	outline: none;
     
@@ -493,7 +523,7 @@ footer{
         align-items: center;
         padding: 150px 30px;
         gap: 50px;
-        background-color: #0A8080;
+        background-color: var(--second-color);
         transition: all .4s ease;
     }
     .open {
@@ -538,7 +568,7 @@ footer{
 
     form input{
         width: 300px;
-        background-color: white;
+        background-color: var(--bg-color);
         box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.1);
         border-radius: 18px;
         margin-left: 30px;
@@ -584,7 +614,7 @@ footer{
     }
 
     form input{
-        background-color: white;
+        background-color: var(--bg-color);
         border: none;
         padding: 16px;
         width: 100%;
@@ -594,7 +624,7 @@ footer{
     }
 
     form textarea{
-        background-color: white;
+        background-color: var(--bg-color);
         border: none;
         border-radius: 16px;
         width: 100%;
@@ -605,7 +635,7 @@ footer{
     .btn-contact{
         border: none;
         background-color: #0F2137;
-        color: white;
+        color: var(--bg-color);
         font-weight: 600;
         font-size: 20px;
         padding: 12px 50px;
